Refactor report controllers to new package structure, update FXML files, and enhance scene management with new report scene constants; add ehcache and jackson dependencies